--- a/src/main/resources/templates/users/userForm.html
+++ b/src/main/resources/templates/users/userForm.html
@@ -32,6 +32,14 @@
                   th:object="${userFormDto}">
 
                 <div class="form-group">
+                    <label th:for="email">이메일</label>
+                    <input type="email" th:field="*{email}" class="form-control"
+                           placeholder="이메일을 입력하세요.">
+                    <p th:if="${#fields.hasErrors('email')}"
+                       th:errors="*{email}" class="fieldError">Incorrect data</p>
+                </div>
+
+                <div class="form-group">
                     <label th:for="id">아이디</label>
                     <input type="text" th:field="*{id}" class="form-control"
                            placeholder="아이디를 입력하세요.">
@@ -55,20 +63,11 @@
                        th:errors="*{pw}" class="fieldError">Incorrect data</p>
                 </div>
 
-                <div class="form-group">
-                    <label th:for="em">이메일</label>
-                    <input type="email" th:field="*{em}" class="form-control"
-                           placeholder="이메일을 입력하세요.">
-                    <p th:if="${#fields.hasErrors('em')}"
-                       th:errors="*{em}" class="fieldError">Incorrect data</p>
-                </div>
-
-
                 <div style="text-align:center">
                     <button type="submit" class="btn btn-primary okButton" style="">확인</button>
                 </div>
-<!--                <input type="hidden" th:name="${_csrf.parameterName}"-->
-<!--                       th:value="${_csrf.token}">-->
+                <!--                <input type="hidden" th:name="${_csrf.parameterName}"-->
+                <!--                       th:value="${_csrf.token}">-->
             </form>
         </div>
     </div>
