--- a/src/main/resources/templates/users/userLoginForm.html
+++ b/src/main/resources/templates/users/userLoginForm.html
@@ -17,8 +17,8 @@
     <div class="col-md-8" style="background-color: #fff; border-radius: 10px; box-shadow: 0px 2px 10px rgba(0,0,0,0.1);">
       <form role="form" method="post" action="/user/login">
         <div class="form-group">
-          <label th:for="id">아이디</label>
-          <input type="text" name="id" class="form-control" placeholder="아이디를 입력해주세요">
+          <label th:for="email">이메일</label>
+          <input type="email" name="email" class="form-control" placeholder="이메일을 입력해주세요">
         </div>
         <div class="form-group">
           <label th:for="pw">비밀번호</label>
@@ -27,7 +27,9 @@
         <p th:if="${loginErrorMsg}" class="error" th:text="${loginErrorMsg}"></p>
         <button class="btn btn-primary loginButton" onclick="location.href='/'">로그인</button>
         <button type="button" class="btn btn-primary signupButton" onclick="location.href='/user/new'">회원가입</button>
-<!--        <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">-->
+        <a href="https://kauth.kakao.com/oauth/authorize?client_id=717132960bdd5b0e541acb17c327097d&redirect_uri=http://localhost:8080/user/auth/kakao/callback&response_type=code">
+          <img height="38px" src="/img/kakao_login_button.png"></a>
+        <!--        <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">-->
       </form>
       <div style="position: relative; width: 100%; height: 20px; margin-top: -10px;">
         <div style="position: absolute; left: 50%; transform: translateX(-50%); width: 20px; height: 20px; background-color: #fff;"></div>
